Update עדכון שבועי “העצמאות-שלי”

--- a/content/weekly-update/העצמאות-שלי.md
+++ b/content/weekly-update/העצמאות-שלי.md
@@ -9,8 +9,6 @@ date: 2022-05-04T12:13:33.056Z
 
 **חג שמח מכל צוות גן ילדי הטבע הדמוקרטי**
 
- 
-
 ## שכבת הצעירים
 
 השבוע חגגנו יחד את יום העצמאות! כל הגן התקשט בדגלים שמתנופפים להם ברוח בכחול ולבן, והילדימות מאוד התרגשו למראה הקישוטים. גם על החג הזה כמובן דיברנו באמצעות סימני החג. התבוננו בדגלים, וראינו באילו צבעים הם: כחול ולבן. התבוננו בצורות שעל הדגל: שני פסים ארוכים, ושני משולשים זה על זה, שיחדיו יוצרים כוכב מיוחד שנקרא "מגן דוד". לכבוד החג, גם הבצק שלנו התקשט ונצבע בכחול. לקחנו קצת בצק לבן וקצת כחול, ובדקנו מה קורה כשמערבבים אותם: הילדימות לשו ולשו. בהתחלה ראינו ששני הצבעים מתפתלים זה סביב זה ויוצרים פסים עדינים של צבע בתוך הבצק. לאט לאט, הצבעים לגמרי התערבבו זה בזה, וקיבלנו צבע תכלת!
@@ -24,8 +22,6 @@ date: 2022-05-04T12:13:33.056Z
 **אז חג שמח לכולם, מחכות לכם ביום ראשון עם בקבוקים מלאים וסדינים נקיים!**
 
 **צוות שכבת הצעירים - חוה, מיכל, עדי, בר, שיר, רוני ואולגה**
-
-
 
 ## שכבת הבוגרים
 
@@ -61,6 +57,8 @@ date: 2022-05-04T12:13:33.056Z
 
 בארוחת החג הילדימות הגישו לשכבה הצעירה פלאפל חם וטרי שראובנה הכינה. הבוגרים שלנו שאלו את הצעירים מה הם רוצים בתוך הפיתה: טחינה? אולי סלט?הם/ן היו מדהימים/ות, תפעלו בנועם את הדוכנים ושמחו לעזור לצעירים להכין לעצמם צלחת. המון תודה לכל הבוגרימות הנהדרימות שלנו!
 
+**<text-align=left>**
+
 **Gaby's Corner**
 
 This week when talking about Israel's birthday, we talked about the different things Israel has and used some toys to help us learn some new words in English. What did we build in our country?  We built *houses* and *streets* with *bridges*, and planted many beautiful *trees*. In the classroom we also wanted to see what it would look like, so we used our train tracks to build a path with a bridge and cars, and lined it with houses and trees.
@@ -68,6 +66,8 @@ This week when talking about Israel's birthday, we talked about the different th
 Lately, many of the children have been talking about Monsters in the yard. So in English time we decided to go on a Monster hunt! We tiptoed through the forest, swam through swamps, and were on the lookout for the big hairy green monster! We ran into pumpkins that blocked the way and had to hop over them. We reached trees and heard owls singing from the branches. We made it to a cave and when we looked inside there was a monster! oh no!. We weren’t scared though!!
 
 You can try going on a [monster hunt](https://youtu.be/4ebiV7uu2t0) from home - who knows what you will find? The song is based on the book “We’re going on a Bear Hunt” by Michael Rosen, and utilises repetitions of several important words: *over, under, big, green, scary*.
+
+**<text-align=right>**
 
 **חג שמח! מחכות לכם ביום ראשון עם בקבוקים מלאים וסדינים נקיים -** 
 
