Update עדכון שבועי “העצמאות-שלי”

--- a/content/weekly-update/העצמאות-שלי.md
+++ b/content/weekly-update/העצמאות-שלי.md
@@ -57,7 +57,7 @@ date: 2022-05-04T12:13:33.056Z
 
 בארוחת החג הילדימות הגישו לשכבה הצעירה פלאפל חם וטרי שראובנה הכינה. הבוגרים שלנו שאלו את הצעירים מה הם רוצים בתוך הפיתה: טחינה? אולי סלט?הם/ן היו מדהימים/ות, תפעלו בנועם את הדוכנים ושמחו לעזור לצעירים להכין לעצמם צלחת. המון תודה לכל הבוגרימות הנהדרימות שלנו!
 
-**< text-align=left >**
+<P align="left">
 
 **Gaby's Corner**
 
@@ -66,8 +66,6 @@ This week when talking about Israel's birthday, we talked about the different th
 Lately, many of the children have been talking about Monsters in the yard. So in English time we decided to go on a Monster hunt! We tiptoed through the forest, swam through swamps, and were on the lookout for the big hairy green monster! We ran into pumpkins that blocked the way and had to hop over them. We reached trees and heard owls singing from the branches. We made it to a cave and when we looked inside there was a monster! oh no!. We weren’t scared though!!
 
 You can try going on a [monster hunt](https://youtu.be/4ebiV7uu2t0) from home - who knows what you will find? The song is based on the book “We’re going on a Bear Hunt” by Michael Rosen, and utilises repetitions of several important words: *over, under, big, green, scary*.
-
-**< text-align=right >**
 
 **חג שמח! מחכות לכם ביום ראשון עם בקבוקים מלאים וסדינים נקיים -** 
 
