Update עדכון שבועי “העצמאות-שלי”

--- a/content/weekly-update/העצמאות-שלי.md
+++ b/content/weekly-update/העצמאות-שלי.md
@@ -6,6 +6,7 @@ date: 2022-05-04T13:37:47.341Z
 
 1. **פורום הורים מעבר לגן עירוני**:  יתקיים ביום שני הקרוב, 9.5.22 בשעה 20:00 בזום, טבלת הרשמה תישלח בתחילת השבוע. 
 2. **טיול משפחות**: פרטים לגבי הטיול יישלחו אף הם בתחילת השבוע - ארגון הטיול בהנהלת קבוצת הורימות שהתנדבו לכך.
+3. **קייטנת אוגוסט**: השנה תתקיים קייטנה בתאריכים 7.8-16.8, מספר המקומות מוגבל. מייל עם כל הפרטים ישלח אליכם בסופ"ש הבא. 
 
 **חג שמח מכל צוות גן ילדי הטבע הדמוקרטי**
 
