Update עדכון שבועי “העצמאות-שלי”

--- a/content/weekly-update/העצמאות-שלי.md
+++ b/content/weekly-update/העצמאות-שלי.md
@@ -58,17 +58,13 @@ date: 2022-05-04T13:37:47.341Z
 
 בארוחת החג הילדימות הגישו לשכבה הצעירה פלאפל חם וטרי שראובנה הכינה. הבוגרימות שאלו מה הצעירימות רוצים בתוך הפיתה: טחינה? אולי סלט? ..הם/ן היו מדהימים/ות, תפעלו בנועם את הדוכנים ושמחו לעזור לצעירים להכין לעצמם צלחת. המון תודה לכל הבוגרימות הנהדרימות שלנו!
 
-**<DIV>**
+**Gaby's Corner**
 
-**<P>Gaby's Corner**
+This week when talking about Israel's birthday, we talked about the different things Israel has and used some toys to help us learn some new words in English. What did we build in our country?  We built houses and streets with bridges, and planted many beautiful trees. In the classroom we also wanted to see what it would look like, so we used our train tracks to build a path with a *bridge* and *cars*, and lined it with *houses* and *trees*.
 
-<P>This week when talking about Israel's birthday, we talked about the different things Israel has and used some toys to help us learn some new words in English. What did we build in our country?  We built houses and streets with bridges, and planted many beautiful trees. In the classroom we also wanted to see what it would look like, so we used our train tracks to build a path with a bridge and cars, and lined it with houses and trees.
+Lately, many of the children have been talking about Monsters in the yard. So in English time we decided to go on a Monster hunt! We tiptoed through the forest, swam through swamps, and were on the lookout for the big hairy green monster! We ran into pumpkins that blocked the way and had to hop over them. We reached trees and heard owls singing from the branches. We made it to a cave and when we looked inside there was a monster! oh no!. We weren’t scared though!!
 
-<P>Lately, many of the children have been talking about Monsters in the yard. So in English time we decided to go on a Monster hunt! We tiptoed through the forest, swam through swamps, and were on the lookout for the big hairy green monster! We ran into pumpkins that blocked the way and had to hop over them. We reached trees and heard owls singing from the branches. We made it to a cave and when we looked inside there was a monster! oh no!. We weren’t scared though!!
-
-</DIV>
-
-You can try going on a [monster hunt](https://youtu.be/4ebiV7uu2t0) from home - who knows what you will find? The song is based on the book “We’re going on a Bear Hunt” by Michael Rosen, and utilises repetitions of several important words: over, under, big, green, scary.
+You can try going on a [monster hunt](https://youtu.be/4ebiV7uu2t0) from home - who knows what you will find? The song is based on the book “We’re going on a Bear Hunt” by Michael Rosen, and utilises repetitions of several important words: *over, under, big, green, scary*.
 
 **מחכות לכם ביום ראשון עם בקבוקים מלאים וסדינים נקיים -** 
 
