Update לעבוד בגן ילדי הטבע “לעבוד-בגן-ילדי-הטבע”

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -24,7 +24,7 @@ teamList:
       הגיעה צמיחה, גדילה והבנה משותפת שחינוך לגיל הרך הוא חשוב, חיוני וכל כך
       מספק. 
 
-      היום זה כבר לא רק גן אלה גם מרכז מקצועי לחינוך לגיל הרך וזה בזכות הגמישות של המקום ללמוד, לחנך, ללמד ולשים לב לכל אחד ואחת שבוחרים ובוחרות להיכנס למערכת הזו גם בפן האישי וגם בפן המקצועי.
+      היום זה כבר לא רק גן אלא גם מרכז מקצועי לחינוך לגיל הרך וזה בזכות הגמישות של המקום ללמוד, לחנך, ללמד ולשים לב לכל אחד ואחת שבוחרים ובוחרות להיכנס למערכת הזו גם בפן האישי וגם בפן המקצועי.
     index: 0
     img: /assets/pics/uploads/גן-ילדי-הטבע-הדמוקרטי-צוות-הבוגרים-2020-21-צילום-ערן-לם-19-1-.jpg
   - lastname: פריזיאן
