Update עדכון שבועי “אש-ומים-בגן-ילדי-הטבע”

--- a/content/weekly-update/אש-ומים-בגן-ילדי-הטבע.md
+++ b/content/weekly-update/אש-ומים-בגן-ילדי-הטבע.md
@@ -8,13 +8,9 @@ date: 2022-05-12T18:51:36.338Z
 2. **עדכוני צוות**: בשבוע הבא ניפרד משיר שיוצאת לחופשה לקראת-לידה. מאחלים לה לידה קלה והרבה נחת! מבחינת הצוות הנותר - התקן נותר ללא שינוי, נערכנו מבעוד מועד, מייקי ואולגה כבר ממש בעניינים, ונופר תעבור לשכבת הצעירים במקום שיר.
 3. **סלט מחנכות**: בשלב זה של השנה אנחנו מתחילות במסורת סלט המחנכות שלנו. מה זה אומר? מדי פעם מחנכת אחת עוברת משכבה אחת לשכבה השנייה. בתוך השכבה, כל הילדימות מכירים את כל המחנכות, שמתארחות פה ושם בקבוצה המקבילה, ועוזרות בכל מיני נקודות ביום. מעכשיו נראה גם יותר מחנכות מתארחות בשכבה השנייה. מדוע? בשלב זה של השנה לילדימות כבר ביטחון בגן וחוסן נפשי שמאפשר להם להכיר דמות מבוגרת חדשה. בעינינו זה נותן לכולם ריענון קצת להכיר עוד מחנכות/ילדימות, בצורה קצת יותר עמוקה מאשר "בוקר טוב!" במסדרון. פתאום יש מפגש קצת שונה, אוירה קצת אחרת בחצר, וכו'. כך שאם אתם רואים פתאום בחצר דמות פחות מוכרת - זו הסיבה! מוזמנים לומר שלום ולהכיר!
 
-
-
 **בינתיים,**
 
 **שבת מנוחה מכל צוות גן ילדי הטבע הדמוקרטי**
-
-
 
 ## שכבת הצעירים
 
@@ -48,8 +44,6 @@ date: 2022-05-12T18:51:36.338Z
 
 **צוות שכבת הצעירים - חוה, מיכל, עדי, בר, שיר, רוני ואולגה**
 
-
-
 ## שכבת הבוגרים
 
 השבוע שמענו המון סיפורים וחוויות מטיולים משפחתיים בשבילי ארץ ישראל. גם אנחנו בגן טיילנו קצת במדבר, ביערות ובנחלים הצוננים. לא תאמינו כמה לכלוכים מצאנו בטבע, זה היה ממש עצוב. דיברנו על ההבדלים בין לכלוך של הטבע לבין לכלוך של בני האדם. למשל, עלים שנשרו מהעץ מול שקיות של במבה וכדומה. את הלכלוכים אנחנו כבר יודעים שצריך לזרוק בפח ולשמור על הטבע שלנו נקי ונעים :). 
@@ -58,10 +52,14 @@ date: 2022-05-12T18:51:36.338Z
 
 תחמנו את העצים באבנים שמטרתם למנוע מהרוח להניע את הלהבות הלאה ולהתפשט. חשוב לשמור שהמדורה לא תשרוף לנו את הסביבה. הדלקנו את המדורה, [ושרנו יחד](https://youtu.be/1brdy_Ci2jE):
 
-> אש אש,\
-> צריך להיזהר!\
-> לא לגעת בעץ הבוער.\
-> רוצה להתקרב למדורה,\
+> אש אש,
+>
+> צריך להיזהר!
+>
+> לא לגעת בעץ הבוער.
+>
+> רוצה להתקרב למדורה,
+>
 > אבל האש חמה נורא.
 
 מתי אנחנו יודעים.ות שאנחנו קרובים.ומ מידי לאש?  כשמתחיל להיות לנו מאוד חם ולא נעים, לפעמים זה אפילו שורף קצת בעיניים או בלחיים וקשה לנשום. בהמשך שאלנו מה הוא צבעו של העץ שנשרף, וגם צבעו של העשן? שחור! האם  זה נעים לנשום את העשן? מה זה עושה לנו בגוף? הילדימות סיפרו שהעשן מאוד מחניק. העשן מלכלך את האוויר הנקי שאנחנו נושמים, ולרוב אם ננשום עשן אנחנו נשתעל. 
