--- a/content/weekly-update/מהשדה-ועד-סמטאות-השוק.md
+++ b/content/weekly-update/מהשדה-ועד-סמטאות-השוק.md
@@ -2,13 +2,13 @@
 title: מהשדה ועד סמטאות השוק
 date: 2022-06-04T07:25:00.000Z
 ---
-<!--\[if gte mso 9]><xml>
+<!--\\[if gte mso 9]><xml>
  <o:OfficeDocumentSettings>
   <o:AllowPNG/>
  </o:OfficeDocumentSettings>
-</xml><!\[endif]-->
+</xml><!\\[endif]-->
 
-<!--\[if gte mso 9]><xml>
+<!--\\[if gte mso 9]><xml>
  <w:WordDocument>
   <w:View>Normal</w:View>
   <w:Zoom>0</w:Zoom>
@@ -47,9 +47,9 @@ date: 2022-06-04T07:25:00.000Z
    <m:intLim m:val="subSup"/>
    <m:naryLim m:val="undOvr"/>
   </m:mathPr></w:WordDocument>
-</xml><!\[endif]-->
+</xml><!\\[endif]-->
 
-<!--\[if gte mso 9]><xml>
+<!--\\[if gte mso 9]><xml>
  <w:LatentStyles DefLockedState="false" DefUnhideWhenUsed="false"
   DefSemiHidden="false" DefQFormat="false" DefPriority="99"
   LatentStyleCount="376">
@@ -628,9 +628,9 @@ date: 2022-06-04T07:25:00.000Z
   <w:LsdException Locked="false" SemiHidden="true" UnhideWhenUsed="true"
    Name="Smart Link"/>
  </w:LatentStyles>
-</xml><!\[endif]-->
+</xml><!\\[endif]-->
 
-<!--\[if gte mso 10]>
+<!--\\[if gte mso 10]>
 <style>
  /* Style Definitions */
  table.MsoNormalTable
@@ -656,7 +656,7 @@ date: 2022-06-04T07:25:00.000Z
 	mso-bidi-font-family:Arial;
 	mso-bidi-theme-font:minor-bidi;}
 </style>
-<!\[endif]-->
+<!\\[endif]-->
 
 <!--StartFragment-->
 
@@ -668,11 +668,7 @@ date: 2022-06-04T07:25:00.000Z
 
 צעירים- יום שישי 15.7 בשעה 9:00 
 
-המסיבות יערכו בגן, **יחד איתכם ההורים (!!!)** וזה מאוד מרגש אותנו. פרטים נוספים בהמשך. 
-
-\
-<!--\[if !supportLineBreakNewLine]-->\
-<!--\[endif]-->
+המסיבות יערכו בגן, **יחד איתכם ההורים (!!!)** וזה מאוד מרגש אותנו. פרטים נוספים בהמשך.
 
 1. **שבועות**: יום ראשון ה-5.6 הוא חופש שבועות. נחכה לכם בגן ביום שני! 
 2. **גן אחרי גן**: היה לנו ממש ממש נעים וכיף לפגוש את חלקכם בגן אחרי הגן - השארתם אחריכם גן נקי ומתוקתק ואנחנו מודים לכם על זה מאוד! 
@@ -688,13 +684,9 @@ date: 2022-06-04T07:25:00.000Z
 
 נשמח גם אם תשלחו לנו תמונות שלכם  מבלים בתוך הגן!
 
- 
-
 שבוע נפלא 
 
 **מכל צוות גן ילדי הטבע הדמוקרטי**
-
- 
 
 **שכבת הצעירים**
 
@@ -717,8 +709,6 @@ date: 2022-06-04T07:25:00.000Z
 חג שמח!
 
 **צוות שכבת הצעירים - חוה, מיכל, שגיא, בר, נופר, רוני ואולגה**
-
- 
 
 ## **שכבת הבוגרים**
 
