Update עדכון שבועי “שבוע-הגאווה-בגן-ילדי-הטבע”

--- a/content/weekly-update/שבוע-הגאווה-בגן-ילדי-הטבע.md
+++ b/content/weekly-update/שבוע-הגאווה-בגן-ילדי-הטבע.md
@@ -13,8 +13,6 @@ date: 2022-06-17T04:45:13.762Z
 
 מכל צוות גן ילדי הטבע הדמוקרטי
 
- 
-
 ## שכבת הצעירים
 
  השבוע נהננו לנו מהקיץ, מההתבוננות על הילדימות וכמה הם התקדמו בשבועות האחרונים. הגענו לרבעון האחרון של השנה - רבעון הנחת שלנו. אנחנו רואות כבר את הילדימות שולטים בכל מה שקורה עכשיו. למשל, השבוע יכולתם לראות איך כולם יודעים להיכנס, להניח בקבוק בסלסלה, לקחת את התיק ולהיכנס פנימה (נגלה לכם סוד: בפנים הם פשוט הולכים כל אחת.ד לתלות אותו בכיתה שלה.ו, המחנכת לרוב רק מתבוננת מרחוק), ובסוף יום - בדרך אליכם הם כבר למדו תוך שבוע לעצור לקחת בקבוק ותיק! אחרי שאנחנו ממלאות יחד בקבוקים, הילדימות ישר לוקחים ומסדרים את הבקבוקים במעגל ליתר החברימות וקוראים להן לבוא. אלו רק דוגמאות קטנות מסדר היום העמוס שלנו, שמראות כמה הרבה הם כבר יודעים לעשות בעצמם. אנחנו ממש גאות בהם, והשבוע גם ניצלנו את שבוע הגאווה כדי לראות במה כל אחת ואחד גאה בעצמו.ה.
@@ -35,8 +33,6 @@ date: 2022-06-17T04:45:13.762Z
 
 **צוות שכבת הצעירים - חוה, מיכל, שגיא, בר, נופר, רוני ואולגה**
 
-
-
 ## שכבת הבוגרים
 
 השבוע דיברנו על גאווה ושונות בעזרת דגל הגאווה שלנו. התבוננו בצבעים וראינו כמה הם שונים ויחד הם מתחברים לכדי צבעוניות מרשימה. שמנו לב לחברימות בקבוצה: לאחד יש שיער ג׳ינגי, לשנייה שיער בלונדיני ועיניים חומות כל אחד הוא שונה ומיוחד ויחד אנו קבוצה צבעונית ומעניינת ממש כמו הדגל. 
@@ -45,7 +41,7 @@ date: 2022-06-17T04:45:13.762Z
 
 הדגל שלנו הוביל אותנו לשיח על צבעים והדרך שהם מתערבבים ויוצרים צבעים חדשים ממש כמו בשיר [באמצע היום](https://www.youtube.com/watch?v=VT1R37o-d3I). 
 
-**ניסוי בצבעים**
+**[ניסוי בצבעים](https://funlearningforkids.com/rainbow-walking-water-science-experiment-kids/)**
 
 לקחנו 6 כוסות ומילאנו במים. ב-3 מהכוסות, טפטפנו צבעי יסוד, וראינו איך המים נצבעים: בכוס אחת בכחול, בכוס נוספת באדום, ובשלישית בצהוב. סידרנו את הכוסות במעגל, כשבין כל כוס צבעונית גם כוס עם מים שקופים. חיברנו בין הכוסות בעזרת נייר סופג, וחיכינו. במהרה ראינו איך הצבעים מטפסים במעלה שרוולי הנייר שהכנו. הנחנו את הניסוי בצד כדי להתבונן בו מאוחר יותר. כשחזרנו, ראינו שבין הכחול לצהוב, נולדה כוס ירוקה. ממש כמו בשיר!
 
