Update עדכון שבועי “שבוע-הגאווה-בגן-ילדי-הטבע”

--- a/content/weekly-update/שבוע-הגאווה-בגן-ילדי-הטבע.md
+++ b/content/weekly-update/שבוע-הגאווה-בגן-ילדי-הטבע.md
@@ -57,6 +57,14 @@ date: 2022-06-17T04:45:13.762Z
 
 את הקופסא אנו משאירות בכיתה כדי לשמור  על הזחלים שלנו מפני ציפורים רעבות, שמש צורבת ושאר סכנות האורבות להם בטבע. 
 
+**Gaby's Corner**
+
+This week was full of COLORS! We built , sorted and experimented with all the colors of the [RAINBOW](https://youtu.be/tRNy2i75tCc). Where do you see a RAINBOW? On the sign in our classroom and in the SKY after it RAINS. It comes out with the SUN and the CLOUDS. What does the RAINBOW mean? LOVE. It means I LOVE YOU. A few songs we enjoyed this week to celebrate 🎊 
+
+<https://open.spotify.com/track/2SDx0PooHZI1SQKR0y44bs?si=XOrJmLpKQaK0FFNnIbIODA>
+
+<https://open.spotify.com/track/7DW2i7YOFfqzd6EjygeAiu?si=lVQ0YX82Ts2VtvCxUszR3A>
+
 בשבוע הבא נתחיל להתעמק בפרוייקט החרקים שלנו, ואנחנו נחכה לכן בגן ביום ראשון. לא לשכוח סדינים נקיים ובקבוקים מלאים!
 
 **כל צוות שכבת הבוגרים: אורטל, גבי, הילה, רוני, תמר ועדי**
