Update הצוות “חן”

--- a/content/team/חן.md
+++ b/content/team/חן.md
@@ -1,12 +1,16 @@
 ---
-title: חן
-firstname: "חנצ'וק "
-lastname: אלחדיף
-img: /img/pics/חן.jpeg
+title: יגאל
+firstname: יגאל
+lastname: שוורצמן
+img: /assets/pics/uploads/תמונה-יגאל.jpg
 index: 7
 ---
-**חן אלחדיף, בת 33 - מנהלת המטבח** 
+**יגאל שוורצמן, בן 33 -מחנך**. **מתל אביב**
 
-**בוגרת לימודי פסיכותרפיה גופנית**
+בעל תעודת הוראה בחינוך לגיל הרך ותואר ראשון במדעי הרוח.
 
-חן המכונה באוז'ה היא חברת ילדות של אחינועם ומככבת כבשלנית הבית בגן שלנו. בנוסף ללימודי הפסיכותרפיה, לחן תואר ראשון בלימודי מזרח אסיה ואמנות רב-תחומית. מעבר לידי הזהב וליכולות הבישול, האפייה והיצירה המופלאות שלה, בתפקידה הבלתי פורמאלי, היא גם "הפסיכולוגית" של צוות הגן ומקרבת הלבבות של הקהילה שלנו.
+עסקתי בחינוך עוד בשנת השרות ובגרעין נח"ל. אחרי התואר חזרתי לעולם החינוך עם ידע אקדמי ובמקביל התחלתי לעבוד בגנים של ילדי פליטים וילדי חינוך מיוחד בדרום תל אביב.
+
+התאהבתי בעולם הגננות, עשיתי תעודת הוראה וזוהי השנה השישית שלי כגנן מוסמך.
+
+אני אוהב מאוד לעבוד עם ילדים  קודם כל כי זאת העבודה הכי כייפית בעולם, הילדימות תמיד מפתיעים ומדהימים אותי כל פעם מחדש וגם אני אני שמח לעבוד במקצוע שיש בו המון אחראיות, שאילת שאלות והסקת מסקנות. להיות גנן זה תמיד לחשוב, תמיד לערער על מה שמובן מאליו ותמיד להיות שם בשביל הילדימות וגם בשביל הצוות. אני שמח להתחיל שנה חדשה בגן ילדי הטבע הדמוקרטי.
