--- a/content/team/רותם.md
+++ b/content/team/רותם.md
@@ -1,15 +1,16 @@
 ---
-title: "רותם "
-firstname: "רותם "
-lastname: "טרגרמן "
-img: /assets/pics/uploads/whatsapp-image-2021-10-16-at-19.45.24.jpeg
+title: לימור
+firstname: "לימור "
+lastname: " ברגמן"
+img: /assets/pics/uploads/לימור-.jpg
 index: 9
 ---
-**רותם טרגרמן, בת 23 - מחנכת** \
-**5 שנות ניסיון בחינוך לגיל הרך**
+**לימור ברגמן בת 31 גבעתיים**
 
-- - -
+בוגרת תואר ראשון בחינוך לגיל הרך, מכללת קיי.\
+שנה שמינית בתחום החינוך.
 
-כנערה התחלתי לעבוד במערכת החינוך לגיל הרך במושב בו גדלתי והייתי פעילה חברתית ומדריכה בתנועות נוער. מאז ועד היום אני עוסקת בחינוך ושואפת להמשיך לעסוק בתחום זה בהמשך. ילדים בשבילי הם שמחה. אני אוהבת את שמחת החיים שהם מפיצים לעולם, את האהבה שהם מחלקים לסובבים אותם ואת החקרנות האינסופית שלהם. יש בהם תמימות וטוהר שקוסמים לי. אני מרגישה שעם ילדים אני יכולה להיות מי שאני באמת, בלי מסכות, באותנטיות המרבית.
+הגעתי לתחום של הילדים והחינוך מתוך רצון פנימי חזק לעצב את הדור הבא בדרך שהיא חווייתית ותואמת לתחומי העניין של הילדים, וכמובן גם מתוך הצורך שלי להעניק אהבה לילדימות ולהראות שיש דרכי חינוך נוספות.\
+התקשורת בין הילד למבוגר בעיניי צריכה להיות בגובה עיניים כדי לייצר אמון הדדי וביטחון, וכך הילד יגיע להחלטות מתוך שקיפות והבנה.
 
-החיבור שלי לחינוך מגיע מתוך ראיית האחר והרצון שלי שהילדים יקבלו את החינוך הטוב ביותר - מלא באהבה, הקשבה ורצון להבין את הצרכים שלהם. העיסוק בחינוך לגיל הרך נותן לי תחושת סיפוק עצומה ולכן אני מרגישה שאני נמצאת במקום שמתאים לי.
+שמחתי להכיר את גן ילדי הטבע שתואם את גישת החינוך שלי ומאפשר לי ביטוי עצמי, להרגיש חלק ממשפחה, לעטוף את הילדימות בחום ואהבה ולתווך להם את הדרך לעצמאות מחשבתית ומעשית.
