--- a/content/team/נטע.md
+++ b/content/team/נטע.md
@@ -1,16 +1,16 @@
 ---
-title: ענת
-firstname: "ענת "
-lastname: ליידריך
-img: /img/pics/image_6487327.jpg
+title: עומרי
+firstname: עומרי
+lastname: בארי
+img: /assets/pics/uploads/תמונת-פרופיל.jpeg
 index: 15
 ---
-**ענת ליידריך, בת 32 - מחנכת**
+**עומרי בארי, בת 34 - מנהל הגן** 
 
-**בוגרת תואר להוראה ואמנות במכללת אורנים, שלוש שנים בתחום הגיל הרך**
+ *גר בתל אביב, חי בזוגיות עם עידן ואבא לניתאי ותמר.*
 
-- - -
-
-לפני כשנתיים התחלתי לעבוד עם הגיל הרך לראשונה כסייעת בצהרון בעמק בו גדלתי ובגן בקיבוץ. גיליתי עולם תוכן חינוכי מדהים וקסום. זו זכות גדולה עבורי ללוות את האנשים הקטנים האלה, לחזות בהתפתחות הראשונית של נפש האדם ולצפות בהתפעלות הראשונית מהמפגש עם העולם שאנו הבוגרים כבר מזמן שכחנו מהם.
-
-אני אוהבת לחלוק עם הילדימות רגעים של צחוק. צחוק של ילדים זה צחוק אמיתי, תמים, כנה ומרגש. כיף לי לגרום להם לצחוק ולהיות שמחים במקום בו הם נמצאים ועל הדרך ללמד וללמוד ביחד דברים חדשים מרגשים ומעניינים.
+*בשנים האחרונות אני עוסק בעשייה חברתית-חינוכית. במהלך השנים לקחתי חלק במערכות חינוך מגוונת, כמחנך בתיכון, כמנהל אגף נוער וקהילה במועצה אזורית עמק חפר , כמנכ"ל זיכרון בסלון וכמנכ״ל עמותת חושן ( חינוך והסברה של קהילת הלהט״ב).\
+בעל תואר ראשון בפסיכולוגיה ותואר שני במינהל ציבורי. בימים אלה מסיים את הכשרה כמנחה הורים במכון אדלר.**\
+כשאני חושב על החינוך אני מבין שהשקעה בגיל הרך היא מכריעה ומייצרת שורשים חזקים לצמיחה וגדילה של הילדות והילדים בהמשך חייהם, לכן בחרתי לקחת חלק במסע המופלא של ילדי הטבע.**\
+חינוך עבורי הוא תשתית חברתית הנותנת ביטוי למגוון היכולות האנושיות, חיבור בין דרכי חשיבה שונות וקידום יחסי גומלין בין היחיד לחברה. כל זאת, תוך הבנה כי העתיד אליו יגדלו הילדות והילדים של היום ידרוש מהן ידע, כלים ומיומנויות להתמודדות וצמיחה עם תהליכים שונים שאינם ידועים או מוכרים לנו בהכרח. אנחנו נעשה זאת דרך חיבור עמוק, שיח רגשי, ויצירת תחושת מסוגלות. זו התשוקה שממנה אני מגיע למקום.**\
+אני נרגש להיות  במקום שמדבר ומייצר חדשנות בחינוך ורואה בו פרקטיקה של עשייה במהלך היום יום יחד עם הצוות, הילדות והילדים.*
