Update הצוות “שגיא”

--- a/content/team/שגיא.md
+++ b/content/team/שגיא.md
@@ -1,9 +1,9 @@
 ---
-title: 'שגיא '
-firstname: 'שגיא '
-lastname: 'בן יאיר '
+title: "שגיא "
+firstname: "שגיא "
+lastname: "בן יאיר "
 img: /assets/pics/uploads/גן_ילדי_הטבע_הדמוקרטי_צוות_צעירים_-_צילום_לנס_הפקות_68.jpg
-index: 3
+index: 15
 ---
 
 **שגיא בן יאיר, בת 29.**
