--- a/content/team/נטע.md
+++ b/content/team/נטע.md
@@ -2,7 +2,7 @@
 title: עומרי
 firstname: עומרי
 lastname: בארי
-img: /assets/pics/uploads/תמונת-פרופיל.jpeg
+img: /assets/pics/uploads/תמונת-פרופיל-עומרי.jpeg
 index: 1
 ---
 **עומרי בארי, בת 34 - מנהל הגן** 
