Update הצוות “חן”

--- a/content/team/חן.md
+++ b/content/team/חן.md
@@ -5,9 +5,11 @@ lastname: שוורצמן
 img: /assets/pics/uploads/תמונה-יגאל.jpg
 index: 7
 ---
-**יגאל שוורצמן, בן 33 -מחנך**. **מתל אביב**
+**יגאל שוורצמן, בן 33 -מחנך. מתל אביב**
 
-בעל תעודת הוראה בחינוך לגיל הרך ותואר ראשון במדעי הרוח.
+**בעל תעודת הוראה בחינוך לגיל הרך ותואר ראשון במדעי הרוח.**
+
+**\---------------------------------------------------------------------------------**
 
 עסקתי בחינוך עוד בשנת השרות ובגרעין נח"ל. אחרי התואר חזרתי לעולם החינוך עם ידע אקדמי ובמקביל התחלתי לעבוד בגנים של ילדי פליטים וילדי חינוך מיוחד בדרום תל אביב.
 
