Update הצוות “מייקי”

--- a/content/team/מייקי.md
+++ b/content/team/מייקי.md
@@ -5,7 +5,11 @@ lastname: ברון
 img: /assets/pics/uploads/מייקי-1.jpg
 index: 18
 ---
-מייקי ברון-בן 22. שנה חמישית בתחום החינוך לגיל הרך, בתהליך לימוד חינוך בסמינר הקיבוצים.
+**מייקי ברון- בן 22. שנה חמישית בתחום החינוך לגיל הרך**
+
+ **לומד חינוך בסמינר הקיבוצים**.
+
+**\---------------------------------------------------------------------------------**
 
 כשהייתי בן 16 הגעתי בפעם הראשונה למסגרת חינוכית והבנתי שמצאתי את המקום שלי. 
 
