Update הצוות “נטע”

--- a/content/team/נטע.md
+++ b/content/team/נטע.md
@@ -7,10 +7,15 @@ index: 1
 ---
 **עומרי בארי, בת 34 - מנהל הגן** 
 
- *גר בתל אביב, חי בזוגיות עם עידן ואבא לניתאי ותמר.*
+ ***גר בתל אביב, חי בזוגיות עם עידן ואבא לניתאי ותמר.***
 
-*בשנים האחרונות אני עוסק בעשייה חברתית-חינוכית. במהלך השנים לקחתי חלק במערכות חינוך מגוונת, כמחנך בתיכון, כמנהל אגף נוער וקהילה במועצה אזורית עמק חפר , כמנכ"ל זיכרון בסלון וכמנכ״ל עמותת חושן ( חינוך והסברה של קהילת הלהט״ב).\
-בעל תואר ראשון בפסיכולוגיה ותואר שני במינהל ציבורי. בימים אלה מסיים את הכשרה כמנחה הורים במכון אדלר.**\
-כשאני חושב על החינוך אני מבין שהשקעה בגיל הרך היא מכריעה ומייצרת שורשים חזקים לצמיחה וגדילה של הילדות והילדים בהמשך חייהם, לכן בחרתי לקחת חלק במסע המופלא של ילדי הטבע.**\
-חינוך עבורי הוא תשתית חברתית הנותנת ביטוי למגוון היכולות האנושיות, חיבור בין דרכי חשיבה שונות וקידום יחסי גומלין בין היחיד לחברה. כל זאת, תוך הבנה כי העתיד אליו יגדלו הילדות והילדים של היום ידרוש מהן ידע, כלים ומיומנויות להתמודדות וצמיחה עם תהליכים שונים שאינם ידועים או מוכרים לנו בהכרח. אנחנו נעשה זאת דרך חיבור עמוק, שיח רגשי, ויצירת תחושת מסוגלות. זו התשוקה שממנה אני מגיע למקום.**\
+**בעל *תואר ראשון בפסיכולוגיה ותואר שני במינהל ציבורי. בימים אלה מסיים את הכשרה כמנחה הורים במכון אדלר***
+
+**\---------------------------------------------------------------------------------**
+
+*בשנים האחרונות אני עוסק בעשייה חברתית-חינוכית. במהלך השנים לקחתי חלק במערכות חינוך מגוונת, כמחנך בתיכון, כמנהל אגף נוער וקהילה במועצה אזורית עמק חפר , כמנכ"ל זיכרון בסלון וכמנכ״ל עמותת חושן ( חינוך והסברה של קהילת הלהט״ב).*
+
+***כשאני חושב על החינוך אני מבין שהשקעה בגיל הרך היא מכריעה ומייצרת שורשים חזקים לצמיחה וגדילה של הילדות והילדים בהמשך חייהם, לכן בחרתי לקחת חלק במסע המופלא של ילדי הטבע.***ֿ
+
+*חינוך עבורי הוא תשתית חברתית הנותנת ביטוי למגוון היכולות האנושיות, חיבור בין דרכי חשיבה שונות וקידום יחסי גומלין בין היחיד לחברה. כל זאת, תוך הבנה כי העתיד אליו יגדלו הילדות והילדים של היום ידרוש מהן ידע, כלים ומיומנויות להתמודדות וצמיחה עם תהליכים שונים שאינם ידועים או מוכרים לנו בהכרח. אנחנו נעשה זאת דרך חיבור עמוק, שיח רגשי, ויצירת תחושת מסוגלות. זו התשוקה שממנה אני מגיע למקום.\*\*\
 אני נרגש להיות  במקום שמדבר ומייצר חדשנות בחינוך ורואה בו פרקטיקה של עשייה במהלך היום יום יחד עם הצוות, הילדות והילדים.*
