Update הצוות “שגיא”

--- a/content/team/שגיא.md
+++ b/content/team/שגיא.md
@@ -5,12 +5,11 @@ lastname: "בן יאיר "
 img: /assets/pics/uploads/גן_ילדי_הטבע_הדמוקרטי_צוות_צעירים_-_צילום_לנס_הפקות_68.jpg
 index: 15
 ---
-
-**שגיא בן יאיר, בת 29.**
+**שגיא בן יאיר, בת 31- קפטנית** 
 
 **בוגרת תואר ראשון בחינוך לגיל הרך, המסלול היצירתי בסמינר הקיבוצים- שנתיים בגן**
 
-<br />
+**\---------------------------------------------------------------------------------**
 
 הגעתי לתחום החינוך מתוך אהבה גדולה לילדימות ואמונה גדולה בחינוך. יש בי רצון להשפיע על דור העתיד ולהנחיל ערכים בהם אני מאמינה כמו עצמאות, הגשמה עצמית, קבלת האחר, איכות הסביבה וכדומה.
 
