Update הצוות “רותם”

--- a/content/team/רותם.md
+++ b/content/team/רותם.md
@@ -5,10 +5,12 @@ lastname: " ברגמן"
 img: /assets/pics/uploads/לימור-.jpg
 index: 9
 ---
-**לימור ברגמן בת 31 גבעתיים**
+**לימור ברגמן בת 31 גבעתיים- מחנכת** 
 
-בוגרת תואר ראשון בחינוך לגיל הרך, מכללת קיי.\
-שנה שמינית בתחום החינוך.
+**בוגרת תואר ראשון בחינוך לגיל הרך, מכללת קיי.**\
+**שנה שמינית בתחום החינוך.**
+
+**\---------------------------------------------------------------------------------**
 
 הגעתי לתחום של הילדים והחינוך מתוך רצון פנימי חזק לעצב את הדור הבא בדרך שהיא חווייתית ותואמת לתחומי העניין של הילדים, וכמובן גם מתוך הצורך שלי להעניק אהבה לילדימות ולהראות שיש דרכי חינוך נוספות.\
 התקשורת בין הילד למבוגר בעיניי צריכה להיות בגובה עיניים כדי לייצר אמון הדדי וביטחון, וכך הילד יגיע להחלטות מתוך שקיפות והבנה.
