Update הצוות “חן”

--- a/content/team/חן.md
+++ b/content/team/חן.md
@@ -5,7 +5,7 @@ lastname: שוורצמן
 img: /assets/pics/uploads/תמונה-יגאל.jpg
 index: 7
 ---
-**יגאל שוורצמן, בן 33 -מחנך. מתל אביב**
+**יגאל שוורצמן, בן 33 -מחנך. מתל אביב- מחנך**
 
 **בעל תעודת הוראה בחינוך לגיל הרך ותואר ראשון במדעי הרוח.**
 
