--- a/content/team/בר.md
+++ b/content/team/בר.md
@@ -2,7 +2,7 @@
 title: בר
 firstname: בר
 lastname: בגריש
-img: /assets/pics/uploads/whatsapp-image-2021-08-09-at-14.59.07.jpeg
+img: /assets/pics/uploads/תמונה-של-בר.jpeg
 index: 14
 ---
 **בר בגריש, בת 29 - מחנכת** 
