Update לעבוד בגן ילדי הטבע “לעבוד-בגן-ילדי-הטבע”

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -118,13 +118,20 @@ teamList:
       וכמה הילדימות חשובים לנו.
 
       להגיע לעבודה בכל בוקר ולקבל חיוך מילד או ילדה מתוקים או לתת חיבוק לילד שקצת קשה לו זה דבר מאוד מעצים שנותן אנרגיה וסיבה להמשיך ולהרבות טוב. זה גן שלוקח את תחום החינוך מאוד ברצינות. במהלך השנה יש ישיבות צוות, סמינר והשתלמויות שמרחיבות את האופקים שלנו והכל בשביל שנהיה הכי מקצועיות וטובות. והכי חשוב- שכל אחת ואחת בצוות תעזור כשצריך, תהיה שם שקצת קשה לך או שאת חולה ולא יכולה להגיע.
-  - title: תמר
-    firstName: תמר
+  - title: מיכל
+    firstName: מיכל
     lastName: "  "
-    img: /assets/pics/uploads/tamar.jpg
+    img: /assets/pics/uploads/גן-ילדי-הטבע-הדמוקרטי-צוות-הבוגרים-2020-21-צילום-ערן-לם-24.jpg
     index: 6
     role: " "
-    description: "אני עובדת בגן כבר כמעט שמונה שנים. להיות בגן זה להרגיש חלק מקהילה.
-      הצוות החינוכי מורכב מנשות חינוך שמאמינות בכוח שיש לילדימות לשנות את העולם
-      ועושות הכל כדי לסייע להם לגלות את הפוטנציאל הגלום בהם. "
+    description: "לגן ילדי הטבע הגעתי דרך חברה שבנה היה בגן, ואמרה לי: \"זה בול
+      המקום בשבילך\". והיא לגמרי צדקה! גן ילדי הטבע הוא מקום שעוזר לכולם לגדול
+      ולצמוח - גם לילדימות וגם לצוות. בגן שלנו מאמינים שהחיים הם תהליך למידה אחד
+      ארוך, ואף שלמקום יש כבר שפה משלו וגישה משלו, השפה והגישה האלו ממשיכות
+      להתפתח ולהיבנות עם השנים, הודות לתהליכי החשיבה שמתרחשים כאן מדי יום.
+      אחינועם בנתה מקום שמצליח לראות כל אחת ואחד - מהפעוט הקטן ביותר ועד לאשת
+      הצוות הוותיקה ביותר, וזה דבר אדיר. אני נהנית לקחת חלק בתהליך הזה, ולהגיע
+      מדי יום למקום שבו מתרחשת עשייה חינוכית משמעותית.
+
+      \ "
 ---
