Update הצוות “הדר”

--- a/content/team/הדר.md
+++ b/content/team/הדר.md
@@ -5,7 +5,11 @@ lastname: ארץ
 img: /assets/pics/uploads/תמונה-של-הדר-.jpeg
 index: 19
 ---
-גן ילדי הטבע עבורי הוא מקום בו הגינון נעשה בתשומת לב והשקעה. בילדיםות, וגם במחנכות- הליווי שאני מקבלת, הידע המקצועי, הפירגון והאוזן הקשבת, הם אוצרות של ממש ולא מובנים מאליהם.\
+הדר ארץ בת 27 גרה בתל-אביב
+
+........................................................................................................................................................
+
+ גן ילדי הטבע עבורי הוא מקום בו הגינון נעשה בתשומת לב והשקעה. בילדיםות, וגם במחנכות- הליווי שאני מקבלת, הידע המקצועי, הפירגון והאוזן הקשבת, הם אוצרות של ממש ולא מובנים מאליהם.\
 מחשבה רבה מושקעת בכל פן שקשור להתנהלות של הגן והצוות. וזה עובד!
 
 לאחר שעבדתי מספר שנים בטיפול בילדים באופן פרטי, בחרתי לחזור לעבוד בגן כי התגעגעתי לעבודה עם צוות. ההווי, העבודה שכם אל שכם, הלמידה ההדדית, כל אלה הם ערך מוסף שעושה מבחינתי את ההבדל.\
