Update עדכון שבועי “על-בחירות-ושאר-אירועים-סתויים”

--- a/content/weekly-update/על-בחירות-ושאר-אירועים-סתויים.md
+++ b/content/weekly-update/על-בחירות-ושאר-אירועים-סתויים.md
@@ -44,7 +44,7 @@ date: 2022-11-04T13:36:45.543Z
 
 בינתיים, שתהיה לכולם שבת מנוחה – נתראה ביום ראשון עם בקבוקים מלאים וסדינים נקיים!
 
-**צוות שכבת הבוגרים – שגיא, בר, יגאל, חוה, עדי, רבקה, מיכל, הדר ונופר**
+**צוות שכבת הצעירים – שגיא, בר, יגאל, חוה, עדי, רבקה, מיכל, הדר ונופר**
 
 ## **שכבת הבוגרים**
 
@@ -69,8 +69,6 @@ date: 2022-11-04T13:36:45.543Z
 הגענו לגרעינים אותם אספנו לקערה - לאחר שיתייבשו נשתול בגינה. 
 
 לאחר שכל הדלורית התרוקנה חשבנו יחד איפה יהיו עיניים ופה, כיבינו אורות והכנסנו בזהירות נר קטן והופ יש לנו מנורה.. שעם הזמן גם המתיקה את הכיתה בריח נעים וחמים. 
-
- 
 
 **חלון סתווי**
 
