--- a/content/weekly-update/שבלולים-בכל-פינה-1.md
+++ b/content/weekly-update/שבלולים-בכל-פינה-1.md
@@ -9,9 +9,7 @@ date: 2022-11-18T12:13:53.795Z
 **1. חפצים אישיים 1**: אנא הקפידו לרשום שמות על כל הציוד של הילדימות! על החיתולים (אנחנו מארגנות אותם בערימות מסודרות וזקוקות לשמות של כל ילד עליהם – עד סוף שנת הצעירים ילדימות כבר יודעים לשלוף את החיתול שלהם בעצמם!), על הנעליים, הבגדים, המטריות, הסדינים – בקיצור, על הכל. חשוב לנו לשמור על הציוד שלכם, ונשמח לעזרתכם בכך. אנחנו מעודדות את הילדימות לעצמאות גם בנוגע לציוד האישי שלהם – להוציא בגדים/חיתול מהתיק בעצמם זה משהו שאנחנו מתחילים לעבוד עליו כבר בשכבת הצעירים, ובשכבת הבוגרים ילדימות רבים כבר עכשיו כמעט לא זקוקים לעזרתנו בכך. אבל בדרך לעצמאות הזו הרבה פעמים תכולת התיק מתפזרת על הרצפה והדרך היחידה שלנו לשייך כל בגד לתיק הנכון היא בעזרת שמות :)
 
 2. **חפצים אישיים 2**: השתדלו לא לשלוח את הילדימות עם חפצים אישיים כמו צעצועים לגן. מעבר לזה שקשה יותר לשמור עליהם בגן , הכניסה עם משחק מהבית לגן מקשה על הילדימות להשתלב בסדר היום ובמשחק עם חברימות – הם נצמדים למשחק מפחד שאחרים יקחו אותו או יגעו בו. בגן יש עיקרון משווה שכל הצעצועים הם של הגן, כלומר של כולנו, ולכולם יש הזדמנות לשחק בהם. אנחנו לומדים לחלוק ולשתף ביתר קלות כשאין משהו "שלי מהבית". כמובן, הדבר אינו חל על חפצי מעבר (בייחוד בשכבת הצעירים) – חפצים אלו הם קבועים ונועדו לעזור לילדימות עם קושי ספיציפי, המחנכות והילדימות מכירים אותם ויודעים בדיוק למי הם שייכים :)
-
 3. **נישנוש בוקר**: בבקרים חלק מהילדימות מגיעים עם נשנוש ועושים פיקניק בארגזים הצבעוניים מחוץ לגן - כמה כייף לראות (: שימו לב לסיים את הנשנוש בטרם הכניסה לאזור הסטרילי. מדוע? בדומה למשחקים, האוכל שמוגש בגן הוא של כולנו, ואנחנו אוכלים את אותם דברים. זה חשוב בין היתר בשל רגישויות ואלרגיות למזון, והן לערכים החברתיים שלנו - נעדיף לא לנקר עיניים לילדימות אחרים. בנוסף, בגן אנחנו אוכלים אך ורק בישיבה - אין תנועה עם מזון בפה ואנו נשמח אם תקפידו גם אתם על כך.
-
 4. **סוף היום בשער**: אנחנו מאוד רוצות לתת לכולם הזדמנות להיפגש עם הילדימות בסוף היום בנועם ובבטחה, אך זקוקות לעזרתכם בכך. כדי שנימנע מצפיפות יתר בפנים, השתדלו אחרי שנפרדתן מהמחנכת לצאת בזריזות כדי לאפשר גם להורים נוספים לזכות באותם התנאים השקטים - אפשר כמובן להתארגן על הארגזים מחוץ לגן.
 
 בנוסף, השאירו את העגלות מחוץ לגן לרגע, הן מקשות על הילדימות להגיע להורימות.
@@ -34,7 +32,7 @@ date: 2022-11-18T12:13:53.795Z
 
 **אחינועם, עומרי וכל צוות גן ילדי הטבע הדמוקרטי**
 
-**שכבת הצעירים**
+## **שכבת הצעירים**
 
 השבוע למדנו להכיר קצת יותר טוב את החבר שביקר אותנו בחצר בשבוע שעבר: החילזון. יש לו קונכיה עגולה שנקראת שבלול, צורתה ספירלית: עם קו שיוצא מהאמצע ועושה מעגלים הולכים וגדלים. לכיתה הבאנו קונכיות, העברנו בינינו, הרגשנו והתבוננו, העברנו אצבע על הקו היוצא מהמרכז והרגשנו את התנועה הסיבובית שהיא עושה.
 
