Update לעבוד בגן ילדי הטבע “לעבוד-בגן-ילדי-הטבע”

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -106,18 +106,24 @@ teamList:
 
       עכשיו בתור מחנכת בגן, אני יכולה לספר שאני מקבלת פה המון הדרכות מקצועיות שמאפשרות לי לדייק את עצמי בעבודה מול הילדימות מיום ליום. בנוסף, מעבר להדרכות, אנחנו גם מקיימות שיח פתוח על מה עשינו טוב, מה עבד, ומה דורש שיפור. ההתבוננות והיכולת להבין איך אני מנהלת את הסיטואציה טוב יותר, מאפשרת לנו לצמוח ולגדול יחד עם הילדימות.
     img: /assets/pics/uploads/גן_ילדי_הטבע_הדמוקרטי_צוות_צעירים_-_צילום_לנס_הפקות_68-1-.jpg
-  - title: שיר
-    firstName: שיר
-    lastName: "  "
-    img: /assets/pics/uploads/גן-ילדי-הטבע-הדמוקרטי-צוות-הבוגרים-2020-21-צילום-ערן-לם-2-2-.jpg
+  - title: הדר
+    firstName: הדר
+    lastName: "  ארץ"
+    img: /assets/pics/uploads/תמונה-של-הדר-.jpeg
     index: 6
     role: " "
-    description: >
-      כשנכנסתי לעבוד בגן ילדי הטבע לא הבנתי באמת למה אני נכנסת. הצוות הניהולי
-      גרם לי להבין מהר מאוד איך מתנהלים בגן הזה, מה הערכים שמובילים את המחנכות
-      וכמה הילדימות חשובים לנו.
+    description: >-
+      ?מאיפה להתחיל לתאר כמה גן ילדי הטבע הוא מקום מיוחד עבורי
 
-      להגיע לעבודה בכל בוקר ולקבל חיוך מילד או ילדה מתוקים או לתת חיבוק לילד שקצת קשה לו זה דבר מאוד מעצים שנותן אנרגיה וסיבה להמשיך ולהרבות טוב. זה גן שלוקח את תחום החינוך מאוד ברצינות. במהלך השנה יש ישיבות צוות, סמינר והשתלמויות שמרחיבות את האופקים שלנו והכל בשביל שנהיה הכי מקצועיות וטובות. והכי חשוב- שכל אחת ואחת בצוות תעזור כשצריך, תהיה שם שקצת קשה לך או שאת חולה ולא יכולה להגיע.
+      קודם כל, מקום העבודה הזה מתאים לי כמו כפפה ליד: אני סטודנט לחינוך לגיל הרך, ונעים לי לדעת ולהרגיש שוב ושוב שהלימודים שלי לא מהווים מטרד חלילה, אלא מוערכים ומסתכלים עליהם כעל נכס. היכולת לעבוד וללמוד בד בבד - ולראות איך התאוריה והפרקטיקה משתלבים זה בזה - זה נותן תנאים אידאלים להתפתחות מקצועית. 
+
+      לעבוד בגן ילדי הטבע מעניק לי סיפוק, הנאה גדולה, ונותן משמעות עצומה לימיי. זאת סביבה אנושית חמה, דואגת, מחבקת ומפרגנת. למנהלימות של הגן חשוב שנדע שיש מי ששומע אותנו, ושהקול והתרומה שלנו לגן הם ייחודיים ויקרים עד מאוד.
+
+      זה משהו שאני מעריכה בגן מאוד - הוא לא קופא על השמרים, או מתגלגל מכול האינרציה. הגן הוא אומנם מערכת עם ערכים, סדר יום ותוכנית פדגוגית, אבל יש שם מקום ליוזמה, ביטוי אישי ובחינה מתמדת של השיטה, מתוך רצון להמשיך להשתפר.
+
+      ניכר שמושקעת כל כך הרבה מחשבה על הפרטים הקטנים של כל דבר בגן: כדי לשמור על הביטחון של הילדימות; כדי לאפשר להםן חוויות הצלחה, וכדי שבוודאות הצוות יראה כל ילד וילדה ויעניק לו ולה בדיוק את היחס שייטיב איתםן כרגע. 
+
+      גן ילדי הטבע הוא מקום נפלא לגדול בו, כילדים וכמחנכות.
   - title: מיכל
     firstName: מיכל
     lastName: "  "
