--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -59,19 +59,15 @@ teamList:
 
 
       כשהגעתי קצת חששתי. אמרתי לעצמי "בסדר עוד גן עם המון צוות ומה כבר יכול להיות?" ברגע האמת? זה לגמרי היה אחרת. קיבלנו אותי עם חיוך וגרמו לי להרגיש הכי טוב שיש והכי שייכת. ילדי הטבע הדמוקרטי הוא מקום שאני מרגישה שתמיד אפשר ללמוד, לעלות ולהתקדם בו. היום אני יכולה להגיד בלב שלם שאני יודעת שאני במקום הנכון בשבילי ואני מגיעה בכל בוקר עם חיוך לעבודה.
-  - title: " חן"
-    firstName: חן
-    lastName: " "
-    img: /assets/pics/uploads/חן-3.png
+  - title: יגאל
+    firstName: יגאל
+    lastName: שוורצמן
+    img: /assets/pics/uploads/תמונה-יגאל.jpg
     index: 3
     role: " "
-    description: >-
-      אני חושבת שהמילה שמסכמת יותר מכל את התחושה שיש לי מהעבודה בגן היא -
-      סיפוק. 
-
-      זה נכון שאני עושה את מה שאני אוהבת, אבל אהבה למקצוע לבדה לא מספיקה לתחושת סיפוק (בטוח שלא לאורך זמן). אני חושבת שבגן יש לי את התחושה הזו באופן כל כך ברור כי יש בו צוות ניהולי שרואה, מעריך ויודע להביע הערכה ולתגמל על העבודה שלי. יש מי שמכוון אותי כך שיש לי אפשרות לצמוח ולהשתפר בכל פעם מחדש. אחרי 3 ומשהו שנים באותו מקצוע ובאותו "תפקיד זוטר" אני עדיין מתפלאת איך הצמיחה שלי בגן היא לא רק כעובדת אלא גם כבת אדם. הצמיחה היא ממש לרוחב, דרך כל מיני תחומים שעל פני השטח לא נראים קשורים אבל באמת של הדברים הם יוצרים שלם הרבה יותר עשיר, מעניין ומקצועי.
-
-      חוצמזה, זו סביבת עבודה הכי כיפית שאפשר לבקש - יש צוות מהמם, מבנה מטופח ונעים ומלא ילדים רוקדים וצוחקים סביבי. בסה"כ זכיתי בלוטו של העבודות.
+    description: >-2
+       כשנכנסתי לעולם החינוך לגיל הרך הכרתי כל מיני גנים שונים עם שיטות חינוך ייחודיות. גם בגן ילדי הטבע הדמוקרטי יש ערכים שמובילים את סדר היום בגן ושמים את הילדימות במרכז כל פעולה שאנו עושים.
+      מה שמיוחד בעיניי בגן ילדי הטבע הדמוקרטי, הוא שמעבר לתפיסה החינוכית, פשוט ממש כייף לעבוד פה. זה נשמע מובן מאליו אבל האמת שהיא שלא בכל גן מקבלים יחס כל כך אישי, ליווי חינוכי וגם פוגשים אנשי ונשות חינוך מכל מיני מקומות שונים. במהלך היום בגן אנחנו עוזרים הרבה אחת לשניה, עובדים בצוותים וגם עוברים התלמדויות חינוכיות יחד, שבעייני זה מאוד חשוב. בסופו של יום, עבודה עם ילדים צריכה להיות חינוכית, בטוחה וגם כייפית, אני מרגיש שבגן ילדי הטבע יש את כל המרכיבים האלה. 
   - title: " נופר"
     firstName: נופר
     lastName: " "
