--- a/content/weekly-update/מתנות-מהטבע.md
+++ b/content/weekly-update/מתנות-מהטבע.md
@@ -9,10 +9,7 @@ date: 2023-02-03T08:35:12.155Z
 מזכירות לכן את אירועי ינואר-פברואר הקרובים, אם לא רשמתם, זה הזמן
 
 1. **ב-24.2.23, יום שישי, יתקיים ארוע יום המשפחה לשכבת הבוגרים**. שימו לב, הזזנו את התאריך ביום - הבנו שיהיה לכולם הרבה יותר כיף בשישי בצהריים, אחרי יום קצר פחות מעייף בגן וללא פקקים נוראיים בדרך. הארוע הוא בהשתתפות הילדימות יחד עם סבאסבתא (או דוד.ה אם יותר רלוונטי), הוא יתקיים מיד לאחר הגן ובלעדיכם ההורימות :). הילדימות יחכו בגן, וסבאסבתא יגיעו לגן להיות איתם בגן לשלל תחנות פעילות ונשנושים שהילדימות יכינו להם במהלך השבוע. סבים וסבתות של שכבת הצעירים, אל תדאגו, גם לכן מחכה הפתעה :)
-
 2. **27.2.23 - פורום ההורים הבא.** יישלח לכם בהמשך לינק לטופס בו תוכלו להציע נושאים למפגש הבא שלנו.
-
- 
 
 **שבת מנוחה!**
 
@@ -22,8 +19,8 @@ date: 2023-02-03T08:35:12.155Z
 
 ## **שכבת הצעירים**
 
-שבוע שעבר הכרנו משפחה מיוחדת במינה - משפחת ההדרים, השבוע המשכנו לחקור אותה וגילינו כמה יפה וצבעונית היא, עם ריח ממכר ועסיסיות שמרווה כל צימאון.\
-\
+שבוע שעבר הכרנו משפחה מיוחדת במינה - משפחת ההדרים, השבוע המשכנו לחקור אותה וגילינו כמה יפה וצבעונית היא, עם ריח ממכר ועסיסיות שמרווה כל צימאון.
+
 ראשונה פגשנו את הפומלה - ראינו כמה היא גדולה לעומת התפוז, הקלמנטינה והלימון. הרגשנו גם כמה היא כבדה, ניסינו להרים אותה מעל הראש והשתמשנו בכל הכח שלנו, לעומת הלימון שהוא קטן וקליל - אותו הצלחנו להרים מעל הראש אפילו עם יד אחת :) צחקנו ממש כשהלימון ברח והתגלגל לנו מהידיים, ממש כמו הכדורים הצבעוניים בחצר. אחרי שהתבוננו, מיששנו והרחנו, המחנכות קילפו את הפירות וראינו שמתחת לקליפה מסתתרים המון פלחים. בתוכם נמצאים בקבוקוני מיץ שמלאים בויטמין סי, ששומר עלינו בריאים וחזקים!
 
 
@@ -38,14 +35,12 @@ date: 2023-02-03T08:35:12.155Z
 
 ראובנה קנתה עבורנו שק ענק של תפוזים, חשבנו מה אפשר לעשות עם כל כך הרבה תפוזים? נסחוט מיץ מתוק ומפנק! הבאנו מהמטבח קרש חיתוך, סכין ומסחטה. קודם המחנכת חתכה את התפוזים לחצי, אחר כך אחזנו בפרי וגילינו שכדי לסחוט את כל המיץ החוצה אנחנו צריכים ללחוץ ולסובב. ביצענו את אותה פעולה מספר פעמים עד שנותרה רק הקליפה והרגשנו פתאום כמה קל לקפל אותה כשכבר לא נשארו בתוכה פלחים מלאים במיץ. כשסיימנו לסחוט את כל התפוזים, שפכנו את המיץ למיכל גדול, ראינו שגם המיץ בצבע כתום. מזגנו לכוסות, ויחד התענגנו על כוס תפוזים עסיסית ומרווה :)
 
- 
+
 
 בשבוע הבא נחגוג את טו בשבט ויום המשפחה :)\
 בינתיים מחכות לכם ביום ראשון - לא לשכוח סדינים נקיים ובקבוקים מלאים!
 
 **צוות שכבת הצעירים: עדי, יגאל, אליסה, חוה, שגיא, מיכל, הדר, רוני, קיילה ונופר**
-
-
 
 ## **שכבת הבוגרים**
 
@@ -73,7 +68,7 @@ date: 2023-02-03T08:35:12.155Z
 
 [עץ חדש נולד](https://youtu.be/fxsINVc-Doc)
 
- 
+
 
 **שישה בשקיק-לוין קיפניס**
 
@@ -89,7 +84,7 @@ date: 2023-02-03T08:35:12.155Z
 
 ככל שהעמקנו בסיפור השיח גלש לנושא חברימות בחצר. התעמקנו בדרך בה אנו בוחרים ובוחרות לגשת לבקש להצטרף למשחק וכמה נעים לנו לשחק יחד.
 
- 
+
 
 **שרשרת קליפות**
 
@@ -98,6 +93,8 @@ date: 2023-02-03T08:35:12.155Z
 לכבוד סיום נושא פירות ההדר יצרנו צמידים ריחניים. את הקליפות חתכנו, חוררנו, והשחלנו למנקה מקטרות צבעוני. הילדימות זכו לגלות שהצמיד שלהם.ן משתנה בכל יום. הקליפות מתייבשות ומשנות את צבען.
 
 ![](/assets/pics/uploads/קליפות-תפוזים-ילדי-הטבע.jpg)
+
+
 
 **Gaby’s Corner**
 
@@ -111,9 +108,10 @@ We plants seeds in our GARDEN every week.
 
 This week we started to talk about how seeds GROW into plants and trees.
 
- 
+
 
 בשבוע הבא נחגוג את טו בשבט ויום המשפחה :)\
-בינתיים מחכות לכם ביום ראשון - לא לשכוח סדינים נקיים ובקבוקים מלאים!**צוות שכבת הבוגרים - אורטל, גבי, רוני, לימור, מייקי ונופר**
+בינתיים מחכות לכם ביום ראשון - לא לשכוח סדינים נקיים ובקבוקים מלאים!\
+**צוות שכבת הבוגרים - אורטל, גבי, רוני, לימור, מייקי ונופר**
 
 <!--EndFragment-->
