Update עדכון שבועי “מתנות-מהטבע”

--- a/content/weekly-update/מתנות-מהטבע.md
+++ b/content/weekly-update/מתנות-מהטבע.md
@@ -33,8 +33,7 @@ date: 2023-02-03T08:35:12.155Z
 
 ראובנה קנתה עבורנו שק ענק של תפוזים, חשבנו מה אפשר לעשות עם כל כך הרבה תפוזים? נסחוט מיץ מתוק ומפנק! הבאנו מהמטבח קרש חיתוך, סכין ומסחטה. קודם המחנכת חתכה את התפוזים לחצי, אחר כך אחזנו בפרי וגילינו שכדי לסחוט את כל המיץ החוצה אנחנו צריכים ללחוץ ולסובב. ביצענו את אותה פעולה מספר פעמים עד שנותרה רק הקליפה והרגשנו פתאום כמה קל לקפל אותה כשכבר לא נשארו בתוכה פלחים מלאים במיץ. כשסיימנו לסחוט את כל התפוזים, שפכנו את המיץ למיכל גדול, ראינו שגם המיץ בצבע כתום. מזגנו לכוסות, ויחד התענגנו על כוס תפוזים עסיסית ומרווה :)
 
-בשבוע הבא נחגוג את טו בשבט ויום המשפחה :)\
-בינתיים מחכות לכם ביום ראשון - לא לשכוח סדינים נקיים ובקבוקים מלאים!
+בשבוע הבא נחגוג את טו בשבט ויום המשפחה :) בינתיים מחכות לכם ביום ראשון - לא לשכוח סדינים נקיים ובקבוקים מלאים!
 
 **צוות שכבת הצעירים: עדי, יגאל, אליסה, חוה, שגיא, מיכל, הדר, רוני, קיילה ונופר**
 
@@ -102,8 +101,8 @@ We plants seeds in our GARDEN every week.
 
 This week we started to talk about how seeds GROW into plants and trees.
 
-בשבוע הבא נחגוג את טו בשבט ויום המשפחה :)\
-בינתיים מחכות לכם ביום ראשון - לא לשכוח סדינים נקיים ובקבוקים מלאים!\
+בשבוע הבא נחגוג את טו בשבט ויום המשפחה :) בינתיים מחכות לכם ביום ראשון - לא לשכוח סדינים נקיים ובקבוקים מלאים!
+
 **צוות שכבת הבוגרים - אורטל, גבי, רוני, לימור, מייקי ונופר**
 
 <!--EndFragment-->
