Update עדכון שבועי “מתנות-מהטבע”

--- a/content/weekly-update/מתנות-מהטבע.md
+++ b/content/weekly-update/מתנות-מהטבע.md
@@ -21,15 +21,11 @@ date: 2023-02-03T08:35:12.155Z
 
 ראשונה פגשנו את הפומלה - ראינו כמה היא גדולה לעומת התפוז, הקלמנטינה והלימון. הרגשנו גם כמה היא כבדה, ניסינו להרים אותה מעל הראש והשתמשנו בכל הכח שלנו, לעומת הלימון שהוא קטן וקליל - אותו הצלחנו להרים מעל הראש אפילו עם יד אחת :) צחקנו ממש כשהלימון ברח והתגלגל לנו מהידיים, ממש כמו הכדורים הצבעוניים בחצר. אחרי שהתבוננו, מיששנו והרחנו, המחנכות קילפו את הפירות וראינו שמתחת לקליפה מסתתרים המון פלחים. בתוכם נמצאים בקבוקוני מיץ שמלאים בויטמין סי, ששומר עלינו בריאים וחזקים!
 
-
-
 כשהגענו לעץ הלימונים שבחצר הבוגרים, קטפנו כמה לימונים כדי לרענן את הבצק המוכר שאנו מכינים בכל שבוע. לקחנו פומפיה בעזרתה גירדנו את קליפת הלימון, כגבר ברגע הראשון כל החדר התמלא ריח הדרי מרענן. תחילה טעמנו את הקליפה, אבל היא הייתה קצת מרירה וקשה. אחר כך ניסינו לחבר את הקליפה המגורדת לתוך הבצק, זו הייתה משימה מאתגרת. גילינו שאפשר לגלגל את הבצק לנחש מעל הקליפות, חלקנו יצרנו גומות בעזרת האצבעות והכנסנו לתוכן את הקליפות, אחרים הכינו המון כדורים קטנים ולכל אחד מהם נעצו את הקליפה. תוך כדי עבודה, בדקנו האם ריח הבצק המוכר השתנה? כן, וגם כפות הידיים שלנו נדבקו בנינוח ההדר הממכר!. כשיצאנו לחצר חתכנו את הלימון, וגילינו כמה הוא חמוץ! יצאו לנו פרצופים מכווצים וממש ממש מצחיקים :)
-
-
 
 **מי רוצה תפוח זהב? אני!** 
 
-![](/assets/pics/uploads/סחיטת-תפוזים-ילדי-הטבע.jpg)
+![](/assets/pics/uploads/27c8a5c1-3390-481d-9c40-7f2e9f59f3a1.jpeg)
 
 ראובנה קנתה עבורנו שק ענק של תפוזים, חשבנו מה אפשר לעשות עם כל כך הרבה תפוזים? נסחוט מיץ מתוק ומפנק! הבאנו מהמטבח קרש חיתוך, סכין ומסחטה. קודם המחנכת חתכה את התפוזים לחצי, אחר כך אחזנו בפרי וגילינו שכדי לסחוט את כל המיץ החוצה אנחנו צריכים ללחוץ ולסובב. ביצענו את אותה פעולה מספר פעמים עד שנותרה רק הקליפה והרגשנו פתאום כמה קל לקפל אותה כשכבר לא נשארו בתוכה פלחים מלאים במיץ. כשסיימנו לסחוט את כל התפוזים, שפכנו את המיץ למיכל גדול, ראינו שגם המיץ בצבע כתום. מזגנו לכוסות, ויחד התענגנו על כוס תפוזים עסיסית ומרווה :)
 
@@ -63,8 +59,6 @@ date: 2023-02-03T08:35:12.155Z
 
 [עץ חדש נולד](https://youtu.be/fxsINVc-Doc)
 
-
-
 **שישה בשקיק-לוין קיפניס**
 
 > ..״מעשה בשקיק. שקוף, דקיק, שעף עם הרוח בעד החלון הפתוח,
@@ -78,8 +72,6 @@ date: 2023-02-03T08:35:12.155Z
 במהלך הסיפור פגשנו פירות שונים שכולם רצו להיכנס לשקית. הם דפקו, ביקשו ונענו בחיוב להיכנס פנימה. הכרנו את הפירות שהגיעו לשקית גילינו שהם ממש שונים בגודל בצורה ובטעם…
 
 ככל שהעמקנו בסיפור השיח גלש לנושא חברימות בחצר. התעמקנו בדרך בה אנו בוחרים ובוחרות לגשת לבקש להצטרף למשחק וכמה נעים לנו לשחק יחד.
-
-
 
 **שרשרת קליפות**
 
