--- a/content/weekly-update/מתנות-מהטבע.md
+++ b/content/weekly-update/מתנות-מהטבע.md
@@ -35,6 +35,10 @@ date: 2023-02-03T08:35:12.155Z
 
 ## **שכבת הבוגרים**
 
+**חברה חדשה ישנה** 
+
+השבוע הגיעה אלינו חברה חדשה לשכבה.. אביב שרון! היא היתה איתנו שנה שעברה וחזרה :) הילדימות קיבלו אותה בשמחה יש כאלה שזכרו וכאלה שקצת שכחו.. אבל כולם.ן התרגשו מאוד לקראתה. הילדימות הכירו לה את הכיתות והמשחקים הכי טובים בגן. אביב נכנסה בטבעיות והפכה להיות חלק מהרגע הראשון.
+
 **עץ חדש נולד**
 
 השבוע התעמקנו בעצים סביבנו במבנה שלהם, בתרומה שלהם לסביבה והשימוש שלנו בעצים החיי היומיום שלנו.
