Update עדכון שבועי “על-עצים-ומשפחות”

--- a/content/weekly-update/על-עצים-ומשפחות.md
+++ b/content/weekly-update/על-עצים-ומשפחות.md
@@ -4,12 +4,12 @@ date: 2023-02-09T20:41:47.070Z
 ---
 **שבת שלום לכל משפחות הגן!**
 
-מזכירות לכן את האירואים הקרובים בגן - אם לא רשמתם, זה הזמן!
+א. בעקבות רעידת האדמה שהייתה השבוע (בגן לא הרגשנו דבר אמנם) החלטנו לתרגל את הצוות בנוהל רעידת האדמה שלנו, והיום ביצענו תרגיל של כל הגן. תוך דקה וחצי מקבלת ההתרעה, כל הגן היה ישוב כבר במקומות המיועדים לכך, אחרי שמחנכות כבר הספיקו לבצע סריקה נוספת בתוך הגן לוודא שלא נותר אף אחד מאחור. אנחנו ממש מקווים שלא נזדקק לתרגל את זה בזמן אמת, אבל מוכנות לכל מקרה :)
+
+ב. מזכירות לכן את האירואים הקרובים בגן - אם לא רשמתם, זה הזמן!
 
 1. **ב-24.2.23, יום שישי, יתקיים ארוע יום המשפחה לשכבת הבוגרים**. שימו לב, הזזנו את התאריך ביום - הבנו שיהיה לכולם הרבה יותר כיף בשישי בצהריים, אחרי יום קצר פחות מעייף בגן וללא פקקים נוראיים בדרך. הארוע הוא בהשתתפות הילדימות יחד עם סבאסבתא (או דוד.ה אם יותר רלוונטי), הוא יתקיים מיד לאחר הגן ובלעדיכם ההורימות :). הילדימות יחכו בגן, וסבאסבתא יגיעו לגן להיות איתם בגן לשלל תחנות פעילות ונשנושים שהילדימות יכינו להם במהלך השבוע. סבים וסבתות של שכבת הצעירים, אל תדאגו, גם לכן מחכה הפתעה :)
-
 2. **27.2.23 - פורום ההורים הבא.** יישלח לכם בהמשך לינק לטופס בו תוכלו להציע נושאים למפגש הבא שלנו.
-
 3. **פורים**!
 
 **שימו לב: חופש פורים יתקיים בימים שלישי ורביעי ה-7-8 במרץ.**
@@ -83,8 +83,6 @@ date: 2023-02-09T20:41:47.070Z
 **טו בשבט שמח!**
 
 **צוות שכבת הצעירים: עדי, יגאל, אליסה, חוה, שגיא, מיכל, הדר, רוני, קיילה ונופר**
-
-
 
 ## **שכבת הבוגרים**
 
