Update עדכון שבועי “על-עצים-ומשפחות”

--- a/content/weekly-update/על-עצים-ומשפחות.md
+++ b/content/weekly-update/על-עצים-ומשפחות.md
@@ -68,7 +68,7 @@ date: 2023-02-09T20:41:47.070Z
 
 שאלנו: מה מחזיק את הגוף שלנו? הרגליים! הן חזקות ויציבות כמו השורשים של העץ. ניסינו גם אנחנו לעמוד  יציבים וחזקים כמו העץ. נטענו את הרגליים באדמה כמו שורשים, הגוף שלנו היה הגזע אדיר הקומה, והידיים – ענפים שנעים ברוח! שאלנו: מה אנחנו צריכים לעשות כדי לגדול ולהיות חזקים עץ? מים, אוכל, שינה טובה. ומה העץ צריך כדי לגדול? מים ושמש. בעמידה שלנו ניסינו להתמתח כדי שהענפים והעלים שלנו יקבלו כמה שיותר שמש כמו העץ! בדקנו שהצמחים שלנו קיבלו מספיק מים – השבוע הגשם השקה אותם והם היו ממש שמחים!
 
-בט״ו בשבט חגגנו לעץ יומולדת, שרנו לו "היום יום הולדת" ורקדנו את שיר היומולדת. קיבלנו גם מתנה מהעצים - תפוזים כתומים מתוקים ומרווים :)  ממש כמו בטקס יום הולדת שבו אנחנו נהנים מהעוגה של ילד.ת יום ההולדת, ישבנו ואכלנו יחדיו תפוזים מתוקים. חשבנו איך שאנחנו דואגים להשקות את העצים שלנו, והם בתמורה נותנים לנו צל ופרי – ממש כמו [בשיר שאנחנו אוהבים](https://www.youtube.com/watch?v=CbW58ratUQo). אנחנו כבר כמה שבועות מבלים מדי שבוע בפעילויות גינה, ולכבוד החג, רצינו לחלוק גם אתכם קצת את התוצרים שלנו – מקווים שתמשיכו לטפל בעדשים שלנו טוב! הם זקוקים לאור ולמים (לא יותר מדי. יתכן שכאשר יגבהו מספיק יצטרכו גם איזה מקלון תמיכה! נשמח לקבל תמונות התפתחות בעוד כמה שבועות!
+בט״ו בשבט חגגנו לעץ יומולדת, שרנו לו "היום יום הולדת" ורקדנו את שיר היומולדת. קיבלנו גם מתנה מהעצים - תפוזים כתומים מתוקים ומרווים :)  ממש כמו בטקס יום הולדת שבו אנחנו נהנים מהעוגה של ילד.ת יום ההולדת, ישבנו ואכלנו יחדיו תפוזים מתוקים. חשבנו איך שאנחנו דואגים להשקות את העצים שלנו, והם בתמורה נותנים לנו צל ופרי – ממש כמו [בשיר שאנחנו אוהבים](https://www.youtube.com/watch?v=CbW58ratUQo). אנחנו כבר כמה שבועות מבלים מדי שבוע בפעילויות גינה, ולכבוד החג, רצינו לחלוק גם אתכם קצת את התוצרים שלנו – מקווים שתמשיכו לטפל בעדשים שלנו טוב! הם זקוקים לאור ולמים (לא יותר מדי). יתכן שכאשר יגבהו מספיק יצטרכו גם איזה מקלון תמיכה! נשמח לקבל תמונות התפתחות בעוד כמה שבועות!
 
 מה עוד העצים עושים? המחנכות סיפרו לנו שהעצים גם עוזרים לנקות את האוויר שלנו, ולכן כדאי לנו להקיף את עצמנו בהרבה צמחים ירוקים :) חוץ מזה, אנחנו משתמשים בעץ לעוד הרבה דברים! בדקנו מה סביבנו עשוי מעץ. גילינו שהשולחן שלנו מעץ, הדק בחצר והמון משחקים אהובים כמו הקוביות הצבעוניות, ופאזל החיות.
 
