Update עדכון שבועי “שבוע-של-גלגולים-מצחוק”

--- a/content/weekly-update/שבוע-של-גלגולים-מצחוק.md
+++ b/content/weekly-update/שבוע-של-גלגולים-מצחוק.md
@@ -4,16 +4,11 @@ date: 2023-03-03T10:14:00.344Z
 ---
 **שבת שלום לכל משפחות הגן!**
 
- 
-
 מזכירות לכן את אירועי מרץ הקרובים - אם לא רשמתם, זה הזמן:
 
 1. **שיחות חתך:** התחלנו בשבוע האחרון את שיחות החתך שלנו – מי שטרם נרשמו מוזמנים לעשות זאת בהקדם. שימו לב האם נרשמתם לשיחות פרונטליות בגן או לשיחות וידאו והיערכו בהתאם.
-
 2. **פורים:** ב-6.3 נחגוג בגן את פורים - זהו יום רגיל בגן מלבד קצת חגיגות וכמובן תחפושות :). ההגעה לגן ביום זה היא עד 9:00 – גם בצעירים. אנחנו מבטיחות לצלם עבורכם כמה שיותר תמונות. ממליצות לקרוא את המאמר שנשלח לכם בקבוצה על פורים. שימו לב שלא כל הילדימות שמחים להתחפש ביום הזה – אנחנו ממליצות לא ללחוץ, להכניס את התחפושת לתיק ואולי בהמשך היום הילד.ה תבחר כן לעטות את התחפושת.
-
 3. חופשת פורים: תתקיים ב-7-8.3, ימים שלישי ורביעי, ולאחר מכן נחזור לפעילות רגילה בחמישי-שישי.
-
 4. **הרצאה של אחינועם על חוסן נפשי:** תתקיים ביום שני ה-27.3.23 בשעה שמונה בזום. ההרצאה מתמקדת בניהול רגשי של ילדימות. נשלח אליכם במייל טופס הרשמה להרצאה.
 
 עד אז - 
@@ -50,8 +45,6 @@ date: 2023-03-03T10:14:00.344Z
 
 **צוות שכבת הצעירים – קיילה, יגאל, שגיא, חוה, אליסה, עדי, מיכל, הדר, נופר ורוני**
 
-
-
 ## **שכבת הבוגרים**
 
 **פורים בגן שלנו** 
@@ -73,8 +66,6 @@ date: 2023-03-03T10:14:00.344Z
 
 * הכפית מציירת והשטיח מוכר אבטיחים
 * המטוס נוסע על הכביש והסירה שטה בין עננים.
-
- 
 
 לאחר שהעמקנו בפרצוף שלנו בצחוק שלנו, גילינו שלמילים יכול להיות צליל מצחיק ושהדמיון שלנו מוביל אותנו לאן שאנו רק רוצים/ות. 
 
@@ -104,8 +95,6 @@ date: 2023-03-03T10:14:00.344Z
 
 רקדנו לשירי ליצנים. [ליצנים ](<[ https://youtu.be/nno7bkHxZeA](https://youtu.be/nno7bkHxZeA)>), [ ליצן קטן](*https://youtu.be/Gul_Pj73Di8*)
 
- 
-
 **מעגל צחוק**
 
 האם צחוק באמת מדבק?
@@ -133,6 +122,24 @@ date: 2023-03-03T10:14:00.344Z
  הוספנו מקלות של ארטיק שבעזרתם הילדימות חתכו את הכדורים והכינו יצירות שונות, אחת הכינה פיצה, השני ארטיק. לבסוף הוספנו חיות, הן זללו את הבצק וזה הצחיק אותנו מאד. 
 
 בחצר הוצאנו פיילה וסמרטוטים ונתנו לחיות שלנו מקלחת יסודית בכדי שנוכל להמשיך לשחק איתן :)
+
+**Gaby's Corner**
+
+In honor of this silly week , we took the opportunity in English Time to learn about our feelings and what silly faces we can make.
+
+We were:
+
+HAPPY
+
+ANGRY
+
+SLEEPY
+
+And the ones that made us laugh the most - SILLY!
+
+We all stick our TONGUES out!
+
+Hope you enjoy  [this song](<https://youtube.com/playlist?list=RDlQZX1IIAnLw&playnext=1>) with lots of laughs and giggles showing off each one.
 
 \
 בשבוע הבא נמשיך בהכנות לפורים, וכמובן נחגוג יחדיו! בינתיים מחכות לכם בגן - לא לשכוח בקבוקים מלאים וסדינים נקיים!
