Update עדכון שבועי “שבוע-של-התחלות-חדשות”

--- a/content/weekly-update/שבוע-של-התחלות-חדשות.md
+++ b/content/weekly-update/שבוע-של-התחלות-חדשות.md
@@ -11,7 +11,7 @@ date: 2023-04-21T12:21:22.307Z
 1. ההרצאה בנושא חוסן נפשי וניהול רגשות שנדחתה בשל ההפגנות תתקיים ב-1.5.23 בזום בשעה 20:00. זו הרצאה מרתקת וחשובה, ממליצות לכולם להירשם.
 2. פורום ההורים הבא יתקיים ב-9.5.23 בשעה 20:00, גם כן בזום, בו נדון במעבר לגן עירוני.
 3. בשבוע הבא יחולו יום הזיכרון ויום העצמאות: בגן נחגוג את יום העצמאות ביום שני בבוקר במסעדת פלאפל. הילדימות יעזרו בהכנת הארוחה ותפעול ה"מסעדה". מוזמנים להציע להם להגיע בלבוש חגיגי :) ביום שלישי, יום הזיכרון, הגן ייסגר מוקדם. נתחיל כרגיל בשעה 7:30, ונסיים כמו בימי שישי, בשעה 11:45. ניפגש שוב ביום חמישי.
-4. טיול משפחות: ב-2-3 ביולי ניפגש כולנו לטיול משפחות כיפי במיוחד!
+4. טיול משפחות: ב-2-3 ביוני ניפגש כולנו לטיול משפחות כיפי במיוחד!
 
 **שבת מנוחה!**
 
