Update עדכון שבועי “ולנו-יש-פלאפל”

--- a/content/weekly-update/ולנו-יש-פלאפל.md
+++ b/content/weekly-update/ולנו-יש-פלאפל.md
@@ -2,25 +2,19 @@
 title: ולנו יש פלאפל
 date: 2023-04-28T13:36:58.248Z
 ---
-
-
 **שבת שלום לכל משפחות הגן!**
 
 מזכירות לכן את אירועי הגן הקרובים - אם לא רשמתם, זה הזמן:
 
-1. **הרצאה של אחינועם על חוסן נפשי:** תתקיים ביום שני ה-27.3.23 בשעה שמונה בזום. ההרצאה מתמקדת בניהול רגשי של ילדימות. נשלח אליכם במייל טופס הרשמה להרצאה.
-
-2. **פסח:** חופשת פסח השנה תהיה בתאריכים 4-12.4.23. את החג נציין בגן כיום רגיל עם ארוחה חגיגית ב-3.4.23.
-
-3. **יריד אביב: ב-21.4.23** יתקיים יריד האביב שלנו, לאחר כמה שנות קורונה בהן נאלצנו לוותר עליו. זוהי הזדמנות עבורנו להתכנס כקהילה, לבלות יחדיו בכיף תוך שאנחנו מגייסים כסף למען מטרה חשובה. כל הפרטים נשלחו אליכם במייל השבוע – ראינו שכמה מכם כבר נרשמתם, ונשמח לראות עוד מתנדבים לאיוש הדוכנים!
+1. ההרצאה בנושא חוסן נפשי וניהול רגשות שנדחתה בשל ההפגנות תתקיים **ב-1.5.23 בזום בשעה 20:00**. זו הרצאה מרתקת וחשובה, ממליצות לכולם להירשם.
+2. פורום ההורים הבא יתקיים **ב-9.5.23 בשעה 20:00, גם כן בזום**, בו נדון במעבר לגן עירוני.
+3. **טיול משפחות**: ב-2-3 ביוני ניפגש כולנו לטיול משפחות כיפי במיוחד!
 
 עד אז - 
 
 **שבת מנוחה!**
 
 **אחינועם, עומרי וכל צוות גן ילדי הטבע הדמוקרטי**
-
-
 
 ## **שבוע של עצמאות**
 
